# karten-cli

./: .gitignore  MANIFEST.in  NEWS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
assets/: example-deck.apkg
karten/: card.py  card_generator.py  cli.py  cli_options.py  deck.py  kindle.py  prompt.py  prompt.yaml
tests/: test_card.py  test_cli.py  vocab.db
